--- a/src/modules/user/components/user-stats/styles/themes/_default.scss
+++ b/src/modules/user/components/user-stats/styles/themes/_default.scss
@@ -55,10 +55,12 @@
 
             .name {
                 @include text.get-text-style(ef.get-value($themeDefault, 'nameTextStyle'), ef.get-value($themeDefault, 'nameTextColor'));
+                flex: 0 1 auto;
             }
 
             .value {
                 @include text.get-text-style(ef.get-value($themeDefault, 'valueTextStyle'), ef.get-value($themeDefault, 'valueTextColor'));
+                flex: 0 0 auto;
                 padding-left: 5px;
 
                 ::ng-deep {
